Separate movement and pathing scripts.
Movement is now a separate script solely tasked with movement. Movement script can be used by non-Enemy objects. Enemy Pathing now only dictates how and where the object will move.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,13 +66,14 @@
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\EnemyPathing.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
-    <Compile Include="Assets\Scripts\EnemySpawner2.cs" />
+    <Compile Include="Assets\Scripts\EnemySpawnerOld.cs" />
     <Compile Include="Assets\Scripts\Formation.cs" />
     <Compile Include="Assets\Scripts\GameSession.cs" />
     <Compile Include="Assets\Scripts\HealthDisplay.cs" />
     <Compile Include="Assets\Scripts\Level.cs" />
     <Compile Include="Assets\Scripts\LevelConfig.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
+    <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\MusicPlayer.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\ScoreDisplay.cs" />
